[package]
name = "proc-tree"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Linux process tree: snapshot, incremental maintenance via fork/exec events, ancestry chain queries, PID reuse detection"
repository = "https://github.com/lenitain/proc-tree"
keywords = ["linux", "process", "tree", "proc", "pid"]
categories = ["os", "command-line-utilities"]

[dependencies]
libc = "0.2"
compact_str = "0.7"
arrayvec = "0.7"

[dev-dependencies]
