[package]
name = "proc-tree"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Linux process tree: snapshot, incremental maintenance via fork/exec events, ancestry chain queries, PID reuse detection"
documentation = "https://docs.rs/proc-tree"
repository = "https://github.com/lenitain/proc-tree"
readme = "README.md"
keywords = ["linux", "process", "tree", "proc", "pid"]
categories = ["os", "command-line-utilities"]
authors = ["lenitain <xt.zhu@qq.com>"]

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/",
]

[lib]
name = "proc_tree"
path = "src/lib.rs"

[features]
serde = ["dep:serde"]

default = []

[dependencies]
libc = "0.2"
arrayvec = "0.7"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
